envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 9099
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/secure"
                          redirect:
                            host_redirect: time.ir
                            path_redirect: "/"
                        - match:
                            prefix: "/api"
                          route:
                            cluster: service1
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        provider1:
                          issuer: https://example.com
                          local_jwks:
                            filename: /etc/envoy/jwks.json
                      rules:
                        - match:
                            prefix: "/secure"
                          requires:
                            provider_name: provider1
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service1
      connect_timeout : 0.25s
      type : STRICT_DNS
      lb_policy : ROUND_ROBIN
      load_assignment :
        cluster_name : service1
        endpoints :
          - lb_endpoints :
              - endpoint :
                  address :
                    socket_address :
                      address : app
                      port_value : 80
